✨ New Features: Spring Boot 3.0.6